deploy/base/forwarder/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: forwarder
  labels:
    app: forwarder
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: forwarder
