deploy/base/forwarder/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: forwarder
  labels:
    app: forwarder
spec:
  to:
    kind: Service
    name: forwarder
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
